# windows_service

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  entrypoint.py  pyproject.toml
windows_service/: main.py  windows.py
